--- a/index.html
+++ b/index.html
@@ -2,5 +2,18 @@
 layout: home
 Title: home
 ---
+<!DOCTYPE html>
+<head>
+	<title>Ido Shoshani's Page</title>
+	<link rel="stylesheet" type="text/css" href="_layouts/main.css">
+</head>
+<body>
+<h1>Welcome to my Page</h1>
+<p>
+This is Ido Shoshani's webpage
+</p>
 
-hello
+
+
+
+</body>
