--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@ Title: home
 <!DOCTYPE html>
 <head>
 	<title>Ido Shoshani's Page</title>
-	<link rel="stylesheet" type="text/css" href="_layouts/main.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-<h1>Welcome to my Page</h1>
-<p>
-This is Ido Shoshani's webpage
-</p>
+	<h1>Welcome to my Page</h1>
+	<p>
+	This is Ido Shoshani's webpage
+	</p>
+	<div>
+		<ul>	
+			{% for post in site.posts %}
+			<li>
+				<a href="{{ post.url }}">{{ post.title }}</a>
+
+			</li>
+			{% endfor %}
+		</ul>
+	</div>
 
 
 
