--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ Title: home
 	<div>
 		<ul>	
 			{% for post in site.posts %}
-			<li>
-				<a href="{{ post.url }}">{{ post.title }}</a>
+				<a id="postTitle">
 
-			</li>
+					{post.title} 
+				</a>
 			{% endfor %}
 		</ul>
 	</div>
