--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@ Title: home
 				<div id="postTitle">
 
 					{{ post.title }} 
+
+				</div>
+				<div id="postText">
+					{{ post.text}}
 				</div>
 			{% endfor %}
 		</ul>
