--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Title: home
 
 				</div>
 				<div id="postText">
-					{{ post.text}}
+					{{ post.content}}
 				</div>
 			{% endfor %}
 		</ul>
